/songs [get] Получение данных с фильтрацией по всем полям и пагинацией
